# docling-vlm-sidecar

./: .gitignore  README.md  build.sh  docling_vlm_sidecar.spec  pyproject.toml  requirements.txt  sidecar.entitlements  sidecar_main.py  sign_sidecar.sh
.github/workflows/: release.yml
